Implementing redux toolkit shopping cart

--- a/client/package.json
+++ b/client/package.json
@@ -5,12 +5,17 @@
   "dependencies": {
     "@material-ui/core": "^4.12.4",
     "@material-ui/icons": "^4.11.3",
+    "@reduxjs/toolkit": "^1.9.2",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "axios": "^1.2.6",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-redux": "^8.0.5",
+    "react-router-dom": "^6.8.0",
     "react-scripts": "^5.0.1",
+    "redux": "^4.2.1",
     "styled-components": "^5.3.6",
     "web-vitals": "^1.0.1"
   },
@@ -37,5 +42,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "description": "This repository will have Ecommerce app with MERN stack",
+  "main": "index.js",
+  "author": "",
+  "license": "ISC"
 }
