--- a/client/package.json
+++ b/client/package.json
@@ -10,11 +10,13 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "axios": "^1.2.6",
+    "dotenv": "^16.0.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.8.0",
     "react-scripts": "^5.0.1",
+    "react-stripe-checkout": "^2.6.3",
     "redux": "^4.2.1",
     "styled-components": "^5.3.6",
     "web-vitals": "^1.0.1"
