--- a/admin/package.json
+++ b/admin/package.json
@@ -8,12 +8,14 @@
     "@material-ui/core": "^4.12.4",
     "@material-ui/icons": "^4.11.3",
     "@mui/icons-material": "^5.11.9",
+    "@mui/x-data-grid": "^5.17.24",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-redux": "^8.0.5",
+    "react-router-dom": "^6.8.1",
     "react-scripts": "^5.0.1",
     "recharts": "^2.4.3",
     "web-vitals": "^1.0.1"
